--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
 </head>
 <body>
   <h1>Hello DevOps Pipeline!</h1>
+  <h1>Hello World</h1>
+  <h1>Hello 123</h1>
+  <h1>Hello 123456</h1>
 </body>
 </html>
